Fix aligning of timing labels

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -476,15 +476,24 @@ a {
   width: 100%;
   padding-left: 2rem;
   padding-right: 3rem;
+  margin-bottom: 5rem;
 }
 
 .timingColumn {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
   height: 100%;
   width: 7%;
+}
+
+.timingLabel {
+  font-size: 0.9rem;
+  margin-top: 50px;
+}
+
+.timingLabel:first-child {
+  margin-top: 2rem;
 }
 
 .dayColumn {
@@ -492,6 +501,10 @@ a {
   flex-direction: column;
   align-items: center;
   width: 13%;
+}
+
+.dayLabel {
+  font-size: 1rem;
 }
 
 .timetableBlock {
